# RFS

./: .gitignore  Cargo.toml  README.md  move_mod  test.sh
cli/: Cargo.toml
cli/src/: auth.rs  error.rs  input.rs  main.rs  util.rs
cli/src/commands/: mod.rs  storage.rs
db/: Cargo.toml
db/setup/postgres/: init.sql
db/src/: args.rs  conn.rs  error.rs  main.rs
db/src/run/: ids.rs  mod.rs  setup.rs
lib/: Cargo.toml
rfs-api/: Cargo.toml
rfs-api/src/: client.rs  error.rs  fs.rs  lib.rs  payload.rs  response.rs  traits.rs  users.rs
rfs-api/src/auth/: mod.rs  password.rs  session.rs  totp.rs
rfs-api/src/client/: auth.rs  error.rs  fs.rs  iterate.rs  mod.rs  sec.rs  users.rs
rfs-api/src/client/auth/: password.rs  session.rs  totp.rs
rfs-api/src/client/fs/: mod.rs  storage.rs
rfs-api/src/client/sec/: roles.rs  secrets.rs
rfs-api/src/client/users/: groups.rs  mod.rs  password.rs  totp.rs
rfs-api/src/fs/: backend.rs  mod.rs  storage.rs
rfs-api/src/sec/: roles.rs  secrets.rs
rfs-api/src/users/: groups.rs  mod.rs  password.rs  totp.rs
rfs-cli/: Cargo.toml  README.md
rfs-cli/src/: auth.rs  cli.rs  error.rs  formatting.rs  input.rs  main.rs  path.rs  state.rs  util.rs
rfs-cli/src/cli/: auth.rs  connect.rs  fs.rs  storage.rs  totp.rs  user.rs
rfs-cli/src/cli/auth/: password.rs
rfs-cli/src/cli/auth/totp/: mod.rs  recovery.rs
rfs-cli/src/cli/fs/: download.rs  get.rs  storage.rs
rfs-cli/src/cli/sec/: mod.rs  roles.rs  secrets.rs
rfs-cli/src/cli/sec/roles/: mod.rs
rfs-cli/src/cli/sec/secrets/: password.rs  session.rs
rfs-cli/src/cli/totp/: recovery.rs
rfs-cli/src/cli/user/: group.rs  mod.rs
rfs-cli/src/commands/: fs.rs  mod.rs  storage.rs  user.rs
rfs-cli/src/commands/auth/: mod.rs
rfs-cli/src/commands/auth/totp/: mod.rs  recovery.rs
rfs-cli/src/commands/sec/: mod.rs
rfs-cli/src/commands/sec/roles/: mod.rs
rfs-cli/src/commands/sec/secrets/: mod.rs  password.rs  session.rs
rfs-cli/src/commands/user/: group.rs  mod.rs
rfs-lib/: Cargo.toml  README.md
rfs-lib/src/: error.rs  fs.rs  history.rs  ids.rs  json.rs  lib.rs  query.rs  sec.rs  serde.rs  storage.rs  tags.rs  validation.rs
rfs-lib/src/actions/: auth.rs  fs.rs  mod.rs  sec.rs  storage.rs  user.rs
rfs-lib/src/actions/user/: group.rs  mod.rs
rfs-lib/src/fs/: mod.rs  storage.rs
rfs-lib/src/schema/: auth.rs  fs.rs  mod.rs  sec.rs  storage.rs  user.rs
rfs-lib/src/schema/user/: group.rs  mod.rs
rfs-lib/src/sec/: authn.rs  chacha.rs  mod.rs  secrets.rs
rfs-lib/src/sec/authn/: totp.rs
rfs-lib/src/sec/authn/totp/: recovery.rs
rfs-lib/src/sec/authz/: permission.rs
rfs-lib/src/sec/secrets/: manager.rs
rfs-lib/src/tags/: mod.rs
rfs-lib/src/user/: mod.rs
rfs-lib/src/users/: groups.rs
rfs-server/: Cargo.toml  README.md
rfs-server/src/: error.rs  main.rs  sql.rs  tags.rs  time.rs  util.rs
rfs-server/src/config/: file.rs  mod.rs
rfs-server/src/fs/: checksum.rs  directory.rs  error.rs  file.rs  mod.rs  root.rs
rfs-server/src/net/: error.rs  fs.rs  mod.rs
rfs-server/src/net/layer/: mod.rs  request_id.rs  timeout.rs
rfs-server/src/routing/: serve_file.rs
rfs-server/src/routing/handle/: mod.rs  ping.rs
rfs-server/src/routing/handle/auth/: mod.rs  password.rs  request.rs  submit.rs  totp.rs  verify.rs
rfs-server/src/routing/handle/auth/session/: mod.rs  submit.rs
rfs-server/src/routing/handle/auth/totp/: mod.rs
rfs-server/src/routing/handle/auth/totp/recovery/: key_id.rs  mod.rs
rfs-server/src/routing/handle/auth/totp_hash/: key_id.rs  mod.rs
rfs-server/src/routing/handle/fs/: mod.rs
rfs-server/src/routing/handle/fs/fs_id/: mod.rs
rfs-server/src/routing/handle/sec/: mod.rs
rfs-server/src/routing/handle/sec/roles/: mod.rs
rfs-server/src/routing/handle/sec/roles/role_id/: groups.rs  mod.rs  users.rs
rfs-server/src/routing/handle/sec/secrets/password/: mod.rs  version.rs
rfs-server/src/routing/handle/sec/secrets/session/: mod.rs
rfs-server/src/routing/handle/storage/: mod.rs
rfs-server/src/routing/handle/storage/storage_id/: mod.rs  root.rs
rfs-server/src/routing/handle/storage/storage_id/fs/: mod.rs
rfs-server/src/routing/handle/user/: mod.rs
rfs-server/src/routing/handle/user/group/: mod.rs
rfs-server/src/routing/handle/user/group/group_id/: mod.rs  users.rs
rfs-server/src/routing/handle/user/user_id/: mod.rs
rfs-server/src/sec/: mod.rs  secrets.rs  state.rs
rfs-server/src/sec/authn/: initiator.rs  password.rs
rfs-server/src/sec/authn/session/: mod.rs  token.rs
rfs-server/src/sec/authn/totp/: algo.rs  mod.rs  recovery.rs
rfs-server/src/sec/authz/: permission.rs
rfs-server/src/sec/secrets/: error.rs  fs.rs  key.rs  manager.rs  mod.rs
rfs-server/src/state/: db.rs  ids.rs  mod.rs
rfs-server/src/storage/: fs.rs  mod.rs  types.rs
rfs-server/src/template/: state.rs
rfs-server/src/user/: mod.rs
server/: Cargo.toml
server/src/: .main.rs.swp  .state.rs.swp  error.rs  main.rs  state.rs  tags.rs  util.rs
server/src/auth/: authorize.rs  initiator.rs  mod.rs  password.rs  state.rs  verify.rs
server/src/auth/session/: mod.rs  token.rs
server/src/fs/: checksum.rs  consts.rs  directory.rs  file.rs  mod.rs  root.rs  stream.rs  traits.rs
server/src/net/: cookie.rs  error.rs  fs.rs  html.rs  mime.rs  mod.rs
server/src/record/: auth.rs  bot.rs  event.rs  fs.rs  ids.rs  mod.rs  storage.rs  user.rs
server/src/routing/: mod.rs  serve_file.rs
server/src/routing/handle/: mod.rs
server/src/routing/handle/auth/: password.rs  request.rs  submit.rs  totp.rs  verify.rs
server/src/routing/handle/auth/totp_hash/: key_id.rs  mod.rs
server/src/routing/handle/storage/: mod.rs
server/src/routing/handle/storage/storage_id/: mod.rs
server/src/routing/handle/storage/storage_id/fs/: mod.rs
server/src/sec/: mod.rs
server/src/sec/authn/: initiator.rs  mod.rs  password.rs
server/src/sec/authn/session/: mod.rs  token.rs
server/src/sec/authn/totp/: mod.rs
server/src/state/: ids.rs  mod.rs
server/src/storage/: error.rs  fs.rs  mod.rs  types.rs
server/src/template/: state.rs
server/src/user/: mod.rs
(+143 files in other folders)
