[package]
name = "rfs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"rfs-lib",
	"rfs-db",
	"rfs-cli",
	"rfs-api",
]

[workspace.dependencies.rfs-api]
path = "./rfs-api"

[workspace.dependencies.rfs-lib]
path = "./rfs-lib"

[workspace.dependencies.clap]
version = "4.3.0"
features = ["derive"]

[workspace.dependencies.chrono]
version = "0.4.31"
features= ["serde"]

[workspace.dependencies.base64]
version = "0.21.0"

[workspace.dependencies.serde]
version = "1"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1"

[workspace.dependencies.bincode]
version = "1.3.3"

[workspace.dependencies.futures]
version = "0.3"

[workspace.dependencies.tokio]
version = "1"

[workspace.dependencies.tokio-util]
version = "0.7.8"

[workspace.dependencies.tracing]
version = "0.1.37"

[workspace.dependencies.tracing-subscriber]
version = "0.3.17"
features = ["env-filter"]

[workspace.dependencies.url]
version = "2.2.2"

[workspace.dependencies.mime]
version = "0.3.17"

[workspace.dependencies.rand]
version = "0.8.5"
features = ["small_rng", "std"]

[workspace.dependencies.blake3]
version = "1.3.3"

[workspace.dependencies.sha1]
version = "0.10.5"

[workspace.dependencies.sha2]
version = "0.10.6"

[workspace.dependencies.sha3]
version = "0.10.8"

# -----------------------------------------------------------------------------
# -----------------------------------------------------------------------------

[dependencies]
rfs-lib = { workspace = true }
rfs-api = { workspace = true }

clap = { workspace = true }
lazy_static = { version = "1.4.0" }
futures = { workspace = true }
pin-project = { version = "1" }
chrono = { workspace = true }
base64 = { workspace = true }
data-encoding = { version = "2.4.0" }
snowcloud-cloud = { git = "https://github.com/DAC098/snowcloud" }
email_address = { version = "0.2.4" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { version = "0.9.25" }
bincode = { workspace = true }

rand = { workspace = true }
rust-argon2 = { version = "1" }
blake3 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
hmac = { version = "0.12.1" }
hkdf = { version = "0.12.3" }
chacha20poly1305 = { version = "0.10.1" }
rust-otp = { git = "https://github.com/dac098/rust-otp" }
rust-kms-local = { git = "https://github.com/dac098/rust-kms", features = ["rand", "crypto"] }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = { version = "1.4.0" }

tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = { version = "0.10.5" }

hyper = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["trace"] }
mime = { workspace = true }
url = { workspace = true }

axum = { version = "0.7.3", features = ["macros", "query"] }

handlebars = { version = "4.3.7" }

[dependencies.rust-lib-history]
git = "https://github.com/DAC098/rust-lib.git"
package = "history"
features = ["serde"]

[dependencies.rust-lib-file-sys]
git = "https://github.com/DAC098/rust-lib.git"
package = "file-sys"
features = ["serde", "binary", "crypto", "tokio"]
