[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }

clap = { version = "4.3.0", features = ["derive"] }
futures = { version = "0.3" }
pin-project = { version = "1" }
chrono = { version = "0.4.24" }
base64 = { version = "0.21.0" }
rpassword = { version = "7.2.0" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

blake3 = { version = "1.3.3" }
sha1 = { version = "0.10.5" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.8" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec", "io"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

reqwest = { version = "0.11.18", default-features = false, features = ["cookies"] }
