[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1" }
chrono = { version = "0.4.24", features = [] }
futures = { version = "0.3" }
rpassword = { version = "7.2.0" }

tokio = { version = "1", feautres = ["full"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "json", "chrono"] }
tokio-postgres = { version = "0.7.8" }
