[package]
name = "rfs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.25", features = ["derive"] }
http = { version = "0.2" }

