[package]
name = "rfs-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["reqwest", "reqwest_cookie_store"]

[dependencies]
rfs-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snowcloud-flake = { workspace = true, features = ["serde"] }
mime = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }

strum = { version = "0.25", features = ["derive"] }
http = { version = "1" }
axum-core = { version = "0.4" }

reqwest_cookie_store = { version = "0.5", optional = true }
url = { workspace = true }

[dependencies.reqwest]
workspace = true
optional = true
default-features = false
features = ["cookies", "blocking", "json", "stream"]
