[package]
name = "rfs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfs-lib = { workspace = true }
rfs-api = { workspace = true }

clap = { workspace = true }
futures = { workspace = true }
pin-project = { version = "1" }
chrono = { workspace = true }
base64 = { workspace = true }

ratatui = { version = "0.21.0" }
crossterm = { version = "0.26.1" }
rpassword = { version = "7.2.0" }
unicode-width = { version = "0.1" }
shell-words = { version = "1.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }

blake3 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "io"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

reqwest = { version = "0.11.18", default-features = false, features = ["cookies", "blocking", "json", "stream"] }
reqwest_cookie_store = { version = "0.5" }
url = { workspace = true }
mime = { workspace = true }
mime_guess = { version = "2.0.4" }
