[package]
name = "rfs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
mime = { version = "0.3.17" }
chrono = { version = "0.4.24", features = ["serde"] }
email_address = { version = "0.2.4" }
snowcloud-flake = { git = "https://github.com/DAC098/snowcloud", features = ["serde", "postgres"] }

rand = { version = "0.8.5", features = ["small_rng", "std"] }
chacha20poly1305 = { version = "0.10.1" }
