[package]
name = "rfs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
email_address = { version = "0.2.4" }
snowcloud-flake = { git = "https://github.com/DAC098/snowcloud", features = ["serde", "postgres"] }
bytes = { version = "1" }
postgres-types = { version = "0.2.6", features = ["derive"] }

rand = { workspace = true }
chacha20poly1305 = { version = "0.10.1" }
