[package]
name = "rfs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true }
snowcloud-flake = { workspace = true, features = ["serde", "postgres"] }
thiserror = { workspace = true }

serde_repr = { version = "0.1" }
email_address = { version = "0.2.4" }
bytes = { version = "1" }
postgres-types = { version = "0.2.6", features = ["derive"] }

rand = { workspace = true }
chacha20poly1305 = { version = "0.10.1" }
