[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1" }
lazy_static = { version = "1.4.0" }
futures = { version = "0.3" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

hyper = { version = "0.14.26", features = ["full"] }
tower = { version = "0.4.13" }
tower-http = { version = "0.4.0", features = ["trace"] }
mime = { version = "0.3.17" }

tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec", "io"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
bytes = { version = "1.4.0" }

axum = { version = "0.6.12", features = ["macros"] }

handlebars = { version = "4.3.6" }
